--- a/star_t/apps/star_t_app/templates/index.html
+++ b/star_t/apps/star_t_app/templates/index.html
@@ -13,6 +13,15 @@
         <p>Logged in as {{user.username}}</p>
         <a href="/logout">Logout</a>
         {% endif %}
+        {% if messages %}
+            {% for message in messages %}
+                <p {% if message.tags %}
+                class="{{ message.tags }}"
+                {% endif %}>
+                    {{ message }}
+                </p>
+            {% endfor %}
+        {% endif %}
         <div class="form">
             <h3>Register</h3>
             <form action="/register" method="post" class="form-group">
